objects/Attendee__c.object
<CustomObject>
    <label>Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>